--- a/newsletter.html
+++ b/newsletter.html
@@ -1,5 +1,10 @@
 <p>
-    El tratamiento mas “cool “ para este verano esta en nuestros centros In & Out... te lo contamos a continuación...
+    Como todos los inicios de mes, en In&Out estrenamos nuestra promocion mensual, y en octubre tenemos una sorpresa
+    para todas y todos nuestros clientes, ya que es una promocion doble: Microdermoabrasion con punta de diamante +
+    manicura semipermanente. Este mes, podras disfrutar de este pack indivisible por solo 40€, eso si el pack es para
+    utilizar en el mismo dia, es una excusa perfecta para desconectar de la rutina, llamar a nuestros centros, reservar
+    tu cita y disfrutar de una manana o de una tarde diferente gracias a la promocion de octubre que te cuida y realza
+    toda la belleza que hay en ti.
 </p>
 </p></td></tr>
 <!-- BULLETPROOF BUTTON -->
@@ -11,7 +16,7 @@
                     <table border="0" cellspacing="0" cellpadding="0">
                         <tr>
                             <td align="center" style="border-radius: 3px;" bgcolor="#56ab2a">
-                                <a href="https://www.inandoutbelleza.es/es/cesta?addCart=TRT-4" target="_blank"
+                                <a href="https://www.inandoutbelleza.es/es/cesta?addCart=TRT-10" target="_blank"
                                    style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff;
                                     text-decoration: none; text-decoration: none; padding: 15px 25px;
                                     border-radius: 2px; border: 1px solid #56ab2a; display: inline-block;">
@@ -29,31 +34,29 @@
     <td bgcolor="#ffffff" align="left"
         style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Arial', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
         <p>
-            Seguramente recuerdes que el año pasado lanzábamos en octubre una promoción de lanzamiento de uno de los
-            tratamientos más famosos de toda la gama, esta vez, volvemos de nuevo a disfrutar del mismo tratamiento. Es decir,
-            durante todo el mes de agosto, podrás disfrutar de tu tratamiento Oxigenante Vip 02 por tan sólo 50€. Además,
-            recuerda que puedes comprar una tarjeta de regalo con esta promoción y regalar a alguien muy especial, belleza,
-            relax, pero sobre todo salud, ya que Biologyque Recherche es una firma de cosmética de gran calidad.
+            No te pierdas la Microdermoabrasion con punta de diamante: Si te beneficiaste de nuestra promocion del mes pasado
+            que mejor que complementar tu rutina facial con esta promocion. Muchas personas asocian el nombre a un tratamiento
+            doloroso, y nada mas lejos de la realidad es completamente indoloro, es mas durante el proceso puedes gozar de un
+            rato de relax y desconexion. ¡¡No has venido a la gran manzana a sufrir!! ¡¡Claro que no!! Este tratamiento esta
+            indicado para personas que buscan disminuir lineas de expresion, arrugas o danos causados por el sol, ademas de
+            reducir las cicatrices que el acne ha producido. Por ultimo uno de los mayores beneficios del tratamiento de la
+            microdermoabrasion con punta de diamante es que ayuda a aumentar y activar la circulacion de los capilares
+            sanguineos de nuestro rostro. ¿De verdad te vas a perder este tratamiento maravilloso justo el mes que ademas tiene
+            descuento?
         </p><p>
-        ¿Estamos ante una revolución en el sector de la cosmética? Estamos seguras de que sí, sólo necesitas probar el
-        tratamiento Oxigenante Vip 02 para darte cuenta de sus grandes beneficios.
+        Ademas de esto, podemos presumir de tener al mejor equipo de manicuristas de Malaga, y no basta solo con decirlo,
+        hay que demostrarlo, y por eso hemos decidido que la promocion de octubre sea doble, ademas de la Microdermoabrasion
+        con punta de diamante, esa misma tarde o manana disfruta de una manicura profesional. Es hora de elegir el tono que
+        mas te gusta y que mas se adapta a tu estado de animo y disfruta de la calidad de una manicura profesional de la
+        mano de nuestras asesoras de belleza.
     </p><p>
-        ¿Qué aporta el tratamiento Oxigenante Vip 02? Seguramente, si sigues a famosas influencer de la moda y la cosmética
-        habrás leído sobre este tratamiento, que es ya un “fondo de armario” de cualquier celebrity. Te recopilamos
-        rápidamente todo lo que puede hacer por ti:
+        Recuerda que puedes pedir cita para esta promocion y cualquier otro tratamiento, en nuestro telefono o a traves de
+        nuestra web: <a href="https://www.inandoutbelleza.es/es/citas" style="color: #56ab2a;">PIDE CITA ONLINE</a>
     </p>
-        <ul>
-            <li>Eliminar toxinas de la piel.</li>
-            <li>Propiedades calmantes.</li>
-            <li>Oxigena nuestra piel mejorando el trabajo de nuestras células.</li>
-            <li>Nutre e hidratar.</li>
-        </ul>
-        <p>
-            Para terminar con las grandes ventajas del tratamiento Oxigenante VIP 02 es que es válido para todo tipo de pieles y
-            que además ayuda a cerrar los poros de nuestra piel, para un aspecto mucho más bonito y cuidado.
-        </p><p>
-        ¿Te lo vas a perder? Consulta cualquiera de nuestros centros ubicados en Málaga capital donde nuestras expertas en
-        belleza y cosmética podrán asesorarte en cuanto a tus necesidades específicas.
-    </p><p>
-        Recuerda, sólo durante el mes de agosto, el famoso tratamiento Oxigenante Vip 02 en nuestros centros.
-    </p>
+<p>
+    <strong>
+        Si no quieres más recibir promociones entra en tu
+        <a href="https://www.inandoutbelleza.es/es/cuenta" style="color: #56ab2a;">cuenta</a>
+        y elimina la subscripción
+    </strong>
+</p>
