treatments and bonusCards refactor

--- a/newsletter.html
+++ b/newsletter.html
@@ -1,14 +1,15 @@
 <p>
-    Disfruta de nuestra promo <strong>¨Beauty Mom¨</strong> para que Mama se siga cuidando y poniendose guapa en casa.
-</p><p>
-    Ahora que todas
-    tenemos mas tiempo, estamos dedicándonos un poquito mas a cuidar nuestra piel y nos sentimos mejor usando nuestros
-    productos favoritos, por eso desde In and Out hemos hecho una selección de productos con un <strong>15 % de
-    descuento</strong>. Solo
-    tienes que añadirlos al carrito y ponernos la dirección y el nombre de la persona a la que se lo queréis
-    regalar.¡También puede ser un auto regalo!
+    Nuestra piel está mucho más sensible por la falta de exposición al sol durante la alerta sanitaria además nos va
+    a llevar un par de días asimilar que las mascarillas serán un complemento a tener en cuenta, desde In & Out os
+    aconsejamos seguir con nuestros hábitos diarios de cuidados de la piel, pero fundamental e imprescindible una
+    limpieza, es por ello que os traemos la promoción de Junio, Higiene Facial de Carita.
 </p>
-</td></tr>
+<p>
+    <a href="https://www.inandoutbelleza.es/es/citas" style="color: #56ab2a;">Pide ya tu cita</a>
+    por teléfono o a través de nuestra web y no te pierdas esta gran oportunidad.
+    <strong>Sólo el mes de Junio estará a 40€</strong>, ¡¡Os esperamos!!
+</p>
+</p></td></tr>
 <!-- BULLETPROOF BUTTON -->
 <tr>
     <td bgcolor="#ffffff" align="left">
@@ -18,11 +19,11 @@
                     <table border="0" cellspacing="0" cellpadding="0">
                         <tr>
                             <td align="center" style="border-radius: 3px;" bgcolor="#56ab2a">
-                                <a href="https://www.inandoutbelleza.es/es/productos" target="_blank"
+                                <a href="https://www.inandoutbelleza.es/es/cesta?addCart=TRT-10" target="_blank"
                                    style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff;
                                     text-decoration: none; text-decoration: none; padding: 15px 25px;
                                     border-radius: 2px; border: 1px solid #56ab2a; display: inline-block;">
-                                    COMPRA PRODUCTOS ONLINE
+                                    COMPRA
                                 </a>
                             </td>
                         </tr>
@@ -33,21 +34,26 @@
     </td>
 </tr>
 <tr>
-    <td>
-        <img style="width: 100%;"
-             src="https://www.inandoutbelleza.es/google/drive/promociones/desktop.2020-mayo-beauty-mom-descuentos-para-mama.jpg"/>
-    </td>
-</tr>
-<tr>
-    <td>
+    <td bgcolor="#ffffff" align="left"
+        style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Arial', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
         <p>
-            O sorprendela con una tarjeta regalo para usarla cuando todo esto pase y disfrute haciéndose un masaje ….o
-            cualquiera de nuestros famosos tratamientos.
+            Carita es sinónimo de resultados, de grandes momentos de cuidado de la piel. Déjate seducir por una firma de
+            cosmética de lujo y gran calidad. El verano es una de las épocas más chulas del año es importante preparar y
+            proteger nuestra piel antes de éste, además de con nuestras rutinas de cada día en la que no puede faltar una
+            crema con factor de protección solar, es recomendable de vez en cuando trabajar nuestra piel con un cuidado
+            diferente y más específico en este caso os ofrecemos la Higiene facial de Carita. Limpia y renueva en profundidad.
         </p><p>
-        Elije tus productos mételos en el carrito y regálaselos a mama.
-    </p><p>
-        Corre que vuelan, esta oferta esta disponible hasta agotar existencias.
-        Todas nuestras cajas de belleza llevan un regalo extra para mama.
+        El tratamiento comienza con un desmaquillado completo, después aplicamos el mítico renovateur. Aquí no queda
+        todo, después se realiza un peeling de ultrasonidos, por supuesto después aplicamos vapor para facilitar la
+        posterior extracción y limpieza de poros. Para terminar, aplicamos una mascarilla específica. El peeling de
+        ultrasonidos es sin duda un tratamiento muy demandado por sus grandes beneficios, entre ellos reduce la visibilidad
+        de las arrugas más leves, las cicatrices producidas por el acné, ayuda a eliminar puntos negros y en la limpieza
+        de los poros. ¿Te lo vas a perder?
     </p>
-    </td>
-</tr>
+<p>
+    <strong>
+        Si no quieres más recibir promociones entra en tu
+        <a href="https://www.inandoutbelleza.es/es/cuenta" style="color: #56ab2a;">cuenta</a>
+        y elimina la subscripción
+    </strong>
+</p>
