--- a/newsletter.html
+++ b/newsletter.html
@@ -1,13 +1,8 @@
 <p>
-    Nuestra piel está mucho más sensible por la falta de exposición al sol durante la alerta sanitaria además nos va
-    a llevar un par de días asimilar que las mascarillas serán un complemento a tener en cuenta, desde In & Out os
-    aconsejamos seguir con nuestros hábitos diarios de cuidados de la piel, pero fundamental e imprescindible una
-    limpieza, es por ello que os traemos la promoción de Junio, Higiene Facial de Carita.
-</p>
-<p>
-    <a href="https://www.inandoutbelleza.es/es/citas" style="color: #56ab2a;">Pide ya tu cita</a>
-    por teléfono o a través de nuestra web y no te pierdas esta gran oportunidad.
-    <strong>Sólo el mes de Junio estará a 40€</strong>, ¡¡Os esperamos!!
+    Estamos en la época en la que la piel necesita un buen tratamiento para prepararla para la exposición al sol.
+    Tenerla hidratada es esencial y para que los productos hidratantes sean aun más efectivos no hay nada mejor que un
+    buen tratamiento. Para ello, en In and Out contamos con uno de los mejores tratamientros que se pueden encontrar en
+    el mercado, el de vitamina C de Natura Bissé, llamado Royal Citrus Experience. ¿Quieres saber más? Sigue leyendo...
 </p>
 </p></td></tr>
 <!-- BULLETPROOF BUTTON -->
@@ -19,7 +14,7 @@
                     <table border="0" cellspacing="0" cellpadding="0">
                         <tr>
                             <td align="center" style="border-radius: 3px;" bgcolor="#56ab2a">
-                                <a href="https://www.inandoutbelleza.es/es/cesta?addCart=TRT-10" target="_blank"
+                                <a href="https://www.inandoutbelleza.es/es/cesta?addCart=TRT-5" target="_blank"
                                    style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff;
                                     text-decoration: none; text-decoration: none; padding: 15px 25px;
                                     border-radius: 2px; border: 1px solid #56ab2a; display: inline-block;">
@@ -37,23 +32,27 @@
     <td bgcolor="#ffffff" align="left"
         style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Arial', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
         <p>
-            Carita es sinónimo de resultados, de grandes momentos de cuidado de la piel. Déjate seducir por una firma de
-            cosmética de lujo y gran calidad. El verano es una de las épocas más chulas del año es importante preparar y
-            proteger nuestra piel antes de éste, además de con nuestras rutinas de cada día en la que no puede faltar una
-            crema con factor de protección solar, es recomendable de vez en cuando trabajar nuestra piel con un cuidado
-            diferente y más específico en este caso os ofrecemos la Higiene facial de Carita. Limpia y renueva en profundidad.
+            “Inyección de vitaminas” es un tratamiento facial indicado para recuperar la luminosidad y firmeza de la piel a
+            través de una relajante experiencia de aromaterapia cítrica. Este exquisito protocolo despierta tus sentidos
+            aportando a la piel toda la energía de la vitamina C. Su extraordinaria acción antioxidante repara incluso las
+            pieles más castigadas desvelando un cutis completamente hidratado y revitalizado con el que lucirás un rostro
+            radiante. Está hecho con activos antioxidantes, reafirmantes y reavitalizantes consiguiendo redensificar y rellenar
+            el tejido cutáneo lo que nos lleva a tener una piel radiante y con el tono unifome.
         </p><p>
-        El tratamiento comienza con un desmaquillado completo, después aplicamos el mítico renovateur. Aquí no queda
-        todo, después se realiza un peeling de ultrasonidos, por supuesto después aplicamos vapor para facilitar la
-        posterior extracción y limpieza de poros. Para terminar, aplicamos una mascarilla específica. El peeling de
-        ultrasonidos es sin duda un tratamiento muy demandado por sus grandes beneficios, entre ellos reduce la visibilidad
-        de las arrugas más leves, las cicatrices producidas por el acné, ayuda a eliminar puntos negros y en la limpieza
-        de los poros. ¿Te lo vas a perder?
+        La vitamina C es una fuente de juventud. Su excepcional acción antioxidante es capaz de neutralizar eficazmente el
+        impacto negativo de los radicales libres y el estrés oxidativo causantes de la aparición de los signos de la edad.
+        Con múltiples beneficios para tu cuerpo, esta vitamina ofrece protección biológica frente a los rayos solares, y es
+        profundamente hidratante. Además, favorece de forma natural la producción de colágeno, mejorando la firmeza, y
+        aporta una increíble luminosidad.
+    </p><p>
+        Como ves, ¡la molécula vital para la salud de tu piel! ¿Su precio? <strong>40€ durante todo el mes de
+        Agosto</strong>. ¿Te lo vas a
+        perder?
     </p>
-<p>
-    <strong>
-        Si no quieres más recibir promociones entra en tu
-        <a href="https://www.inandoutbelleza.es/es/cuenta" style="color: #56ab2a;">cuenta</a>
-        y elimina la subscripción
-    </strong>
-</p>
+        <p>
+            <strong>
+                Si no quieres recibir más promociones entra en tu
+                <a href="https://www.inandoutbelleza.es/es/cuenta" style="color: #56ab2a;">cuenta</a>
+                y elimina la subscripción
+            </strong>
+        </p>
