--- a/promo.html
+++ b/promo.html
@@ -1,22 +1,19 @@
 <p>
-    Nuestra piel está mucho más sensible por la falta de exposición al sol durante la alerta sanitaria además nos va
-    a llevar un par de días asimilar que las mascarillas serán un complemento a tener en cuenta, desde In & Out os
-    aconsejamos seguir con nuestros hábitos diarios de cuidados de la piel, pero fundamental e imprescindible una
-    limpieza, es por ello que os traemos la promoción de Junio, Higiene Facial de Carita.
+    La piel se encuentra habitualmente expuesta a agentes agresivos. Durante el
+    verano el sol, el cloro, la sal y los rayos ultravioletas, y durante el invierno la
+    contaminación, el frio, ect... y ahora, con esta nueva normalidad, del uso de las
+    mascarillas, hacen que la piel se nos desequilibre.
 </p><p>
-    Carita es sinónimo de resultados, de grandes momentos de cuidado de la piel. Déjate seducir por una firma de
-    cosmética de lujo y gran calidad. El verano es una de las épocas más chulas del año es importante preparar y
-    proteger nuestra piel antes de éste, además de con nuestras rutinas de cada día en la que no puede faltar una
-    crema con factor de protección solar, es recomendable de vez en cuando trabajar nuestra piel con un cuidado
-    diferente y más específico en este caso os ofrecemos la Higiene facial de Carita. Limpia y renueva en profundidad.
+    Para evitar los posibles efectos secundarios como la deshidratación, las manchas,
+    la irritación o las quemaduras debemos realizar periódicamente reajustes de nuestra piel.
+    Es por ello que hemos pensado en el tratamiento CVS de Biologique. ¿En qué consiste?
 </p><p>
-El tratamiento comienza con un desmaquillado completo, después aplicamos el mítico renovateur. Aquí no queda
-    todo, después se realiza un peeling de ultrasonidos, por supuesto después aplicamos vapor para facilitar la
-    posterior extracción y limpieza de poros. Para terminar, aplicamos una mascarilla específica. El peeling de
-    ultrasonidos es sin duda un tratamiento muy demandado por sus grandes beneficios, entre ellos reduce la visibilidad
-    de las arrugas más leves, las cicatrices producidas por el acné, ayuda a eliminar puntos negros y en la limpieza
-    de los poros. ¿Te lo vas a perder?
+    Tratamiento remodelante compuesto por un líquido y un polvo que actúan en
+    sinergia exfoliando y reafirmando los tejidos. Con este tratamiento realizamos una
+    exfoliación controlada potenciando la regeneración celular y consiguiendo una piel
+    homogénea. Sus maniobras de aplicación producen un efecto antiflacidez que tensan y
+    tonifican el tejido facial consiguiendo una piel suave y luminosa.
 </p><p>
-    Pide ya tu cita por teléfono o a través de nuestra web y no te pierdas esta gran oportunidad.
-    <strong>Sólo el mes de Junio estará a 40€</strong>, ¡¡Os esperamos!!
+    ¿A qué esperas para probarlo? <strong>Todo el mes de Octubre estará a un precio de 55€
+    en nuestros centros In & Out</strong>. ¡Os esperamos!
 </p>
