fix hours october 2020

--- a/src/apps/login/logged/appointment.html
+++ b/src/apps/login/logged/appointment.html
@@ -8,8 +8,8 @@
             {{item.location}}
         </li>
     </ul>
-    <input style="min-width: 125px" type="button" class="button green-bg-color white-color clickable" value="{{logged.addToGoogle}}"
-           onclick="this.form.addToGoogle('{{item.eventId}}', '{{item.calendarId}}')" />
+<!--    <input style="min-width: 125px" type="button" class="button green-bg-color white-color clickable" value="{{logged.addToGoogle}}"-->
+<!--           onclick="this.form.addToGoogle('{{item.eventId}}', '{{item.calendarId}}')" />-->
     <input  style="min-width: 125px" type="button" class="button green-bg-color white-color clickable" value="{{logged.deleteBooking}}"
            onclick="this.form.deleteBooking('{{item.eventId}}', '{{item.calendarId}}')" />
 </div>
