fix hours october 2020 - small fixes

--- a/promo.html
+++ b/promo.html
@@ -1,19 +1,20 @@
-<p>
-    La piel se encuentra habitualmente expuesta a agentes agresivos. Durante el
-    verano el sol, el cloro, la sal y los rayos ultravioletas, y durante el invierno la
-    contaminación, el frio, ect... y ahora, con esta nueva normalidad, del uso de las
-    mascarillas, hacen que la piel se nos desequilibre.
+<p>¿Piensas en poner a punto tu silueta? En In&Out si lo hemos pensado y es por eso por lo que hemos preparado una
+    promoción de Noviembe perfecta para dar el primer paso a la hora de recuperar tu figura. ¿Quieres saber más? No te
+    pierdas el tratamiento de maderoterapia corporal que tenemos para ti.
 </p><p>
-    Para evitar los posibles efectos secundarios como la deshidratación, las manchas,
-    la irritación o las quemaduras debemos realizar periódicamente reajustes de nuestra piel.
-    Es por ello que hemos pensado en el tratamiento CVS de Biologique. ¿En qué consiste?
+    Matriskin es una marca de alto rendimiento que ofrece productos que están revolucionando el mercado, son actualmente
+    una gran alternativa frente a la cirugía, gracias a la alta concentración de principios activos. Este tipo de
+    cosmética de alto rendimiento adquiere cada vez más simpatizantes al ver los efectos de los tratamientos y, sobre
+    todo, para aquellas personas que no quieren pasar por un quirófano.
 </p><p>
-    Tratamiento remodelante compuesto por un líquido y un polvo que actúan en
-    sinergia exfoliando y reafirmando los tejidos. Con este tratamiento realizamos una
-    exfoliación controlada potenciando la regeneración celular y consiguiendo una piel
-    homogénea. Sus maniobras de aplicación producen un efecto antiflacidez que tensan y
-    tonifican el tejido facial consiguiendo una piel suave y luminosa.
+    Maderoterapia corporal, un tratamiento con grandes beneficios, este tratamiento combina la maderoterapia tradicional
+    oriental con el tratamiento Detox Body. Los beneficios que tiene son combatir la piel de naranja, celulitis
+    aportando una mayor definición de la silueta a la vez que se realiza un drenaje linfático que en conjunto hace una
+    reducción del perímetro.
 </p><p>
-    ¿A qué esperas para probarlo? <strong>Todo el mes de Octubre estará a un precio de 55€
-    en nuestros centros In & Out</strong>. ¡Os esperamos!
-</p>
+    En In&Out puedes encontrar tratamientos de Matriskin al alcance de todos los bolsillos y más durante todo el mes de
+    Noviembre ya que podrás comprar tu sesión por tan <strong>sólo 47€</strong> (precio normal sin promoción 60€).
+</p>Desde In&Out te invitamos a que lo pruebes ya que verás los resultados desde la primera sesión.
+</p><p>
+    Puedes pedir tu cita en nuestra web o a través de nuestros teléfonos. ¿A qué estas
+    esperando?</p>
