fix hours october 2020 - small fixes

--- a/newsletter.html
+++ b/newsletter.html
@@ -1,9 +1,10 @@
-<p>¿Piensas en poner a punto tu silueta? En In&Out si lo hemos pensado y es por eso por lo que hemos preparado una
-    promoción de Noviembe perfecta para dar el primer paso a la hora de recuperar tu figura. ¿Quieres saber más? No te
-    pierdas el tratamiento de maderoterapia corporal que tenemos para ti.
+<p>
+    ¿Necesitas renovar y limpiar el cutis? ¿Qué te parece poder dedicar una hora y media al cuidado de tu piel? Es más,
+    ¿qué te parece reservar un tiempo para mimarte a ti misma? Sabemos que día a día te ganas de sobra poder darte un
+    capricho de vez en cuando cuidando de ti y de tu piel, ahora es el momento. Llega la promo de Diciembre: Higiene
+    facial de Carita.
 </p>
 </p></td></tr>
-<!-- BULLETPROOF BUTTON -->
 <tr>
     <td bgcolor="#ffffff" align="left">
         <table width="100%" border="0" cellspacing="0" cellpadding="0">
@@ -12,7 +13,7 @@
                     <table border="0" cellspacing="0" cellpadding="0">
                         <tr>
                             <td align="center" style="border-radius: 3px;" bgcolor="#56ab2a">
-                                <a href="https://www.inandoutbelleza.es/es/cesta?addCart=TRT-77" target="_blank"
+                                <a href="https://www.inandoutbelleza.es/es/cesta?addCart=TRT-10" target="_blank"
                                    style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff;
                                     text-decoration: none; text-decoration: none; padding: 15px 25px;
                                     border-radius: 2px; border: 1px solid #56ab2a; display: inline-block;">
@@ -30,22 +31,30 @@
     <td bgcolor="#ffffff" align="left"
         style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Arial', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
         <p>
-            Matriskin es una marca de alto rendimiento que ofrece productos que están revolucionando el mercado, son actualmente
-            una gran alternativa frente a la cirugía, gracias a la alta concentración de principios activos. Este tipo de
-            cosmética de alto rendimiento adquiere cada vez más simpatizantes al ver los efectos de los tratamientos y, sobre
-            todo, para aquellas personas que no quieren pasar por un quirófano.
-        </p><p>
-        Maderoterapia corporal, un tratamiento con grandes beneficios, este tratamiento combina la maderoterapia tradicional
-        oriental con el tratamiento Detox Body. Los beneficios que tiene son combatir la piel de naranja, celulitis
-        aportando una mayor definición de la silueta a la vez que se realiza un drenaje linfático que en conjunto hace una
-        reducción del perímetro.
-    </p><p>
-        En In&Out puedes encontrar tratamientos de Matriskin al alcance de todos los bolsillos y más durante todo el mes de
-        Noviembre ya que podrás comprar tu sesión por tan <strong>sólo 47€</strong> (precio normal sin promoción 60€).
-    </p>Desde In&Out te invitamos a que lo pruebes ya que verás los resultados desde la primera sesión.
-        </p><p>
-        Puedes pedir tu cita en nuestra web o a través de nuestros teléfonos. ¿A qué estas
-        esperando?</p>
+            Carita es sinónimo de resultados, de grandes momentos de cuidado de la piel. Déjate seducir por una firma de
+            cosmética de lujo y de gran calidad. Es importante preparar y proteger nuestra piel, además de con nuestras
+            rutinas
+            de cada día en la que no puede faltar una crema con factor de protección solar, es recomendable de vez en
+            cuando
+            trabajar nuestra piel con un cuidado diferente y más específico en este caso os ofrecemos la Higiene facial
+            de
+            Carita. Limpia y renueva en profundidad. ¿Te lo vas a perder?
+        </p>
+        <p>
+            El tratamiento comienza con un desmaquillado completo, después aplicamos el mítico renovateur. Aquí no queda
+            todo,
+            después se realiza un peeling de ultrasonidos, por supuesto después aplicamos vapor para facilitar la
+            posterior
+            extracción y limpieza de poros. Para terminar, aplicamos una mascarilla específica.
+        </p>
+        <p>
+            ¿Buscas un centro para higiene facial en Málaga de reconocido prestigio y buenos precios? Todo lo que buscas
+            y mucho
+            más lo puedes encontrar en cualquiera de los dos centros In & Out. Pide ya tu cita por teléfono o través de
+            nuestra
+            web y no te pierdas esta gran oportunidad. <strong>Sólo el mes de Diciembre estará a 40€</strong>, os
+            esperamos!!
+        </p>
         <p>
             <strong>
                 Si no quieres recibir más promociones entra en tu
