fix bank import

--- a/promo.html
+++ b/promo.html
@@ -1,3 +1,33 @@
 <p>
+    Este mes desde In and Out os traemos una experiencia sensorial cítrica. Exfoliación + envoltura reafirmante,
+    hidratante y antioxidante de la mano de Natura Bissé.
+    ¿Qué incluye?
+</p>
+<ul>
+    <li>
+        Aromaterapia y alineación corporal.
+    </li>
+    <li>
+        Efectiva exfoliación cítrica.
+    </li>
+    <li>
+        Concetrado reafirmante con ácido ascórbico, extracto de jengibre y fruto de kigelia.
+    </li>
+    <li>
+        Masaje reafirmante corporal.
+    </li>
+</ul>
 
+<p>Beneficios:</p>
+<ul>
+    <li>
+        Ideal como tratamiento reafirmante.
+    </li>
+    <li>
+        Hidrata y combate el envejecimiento prematuro. -Previene la flacidez.
+    </li>
+</ul>
+<p>
+    ¿Quieres saber por cuánto estará todo el mes de Febrero?<strong> Sólo 50€ en vez de 70€ precio habitual</strong>.
+    ¿Te lo vas a perder? ¡Os esperamos!
 </p>
