--- a/newsletter.html
+++ b/newsletter.html
@@ -1,8 +1,6 @@
 <p>
-    ¿Necesitas renovar y limpiar el cutis? ¿Qué te parece poder dedicar una hora y media al cuidado de tu piel? Es más,
-    ¿qué te parece reservar un tiempo para mimarte a ti misma? Sabemos que día a día te ganas de sobra poder darte un
-    capricho de vez en cuando cuidando de ti y de tu piel, ahora es el momento. Llega la promo de Diciembre: Higiene
-    facial de Carita.
+    Este mes desde In and Out os traemos una experiencia sensorial cítrica. Exfoliación + envoltura reafirmante,
+    hidratante y antioxidante de la mano de Natura Bissé.
 </p>
 </p></td></tr>
 <tr>
@@ -13,7 +11,7 @@
                     <table border="0" cellspacing="0" cellpadding="0">
                         <tr>
                             <td align="center" style="border-radius: 3px;" bgcolor="#56ab2a">
-                                <a href="https://www.inandoutbelleza.es/es/cesta?addCart=TRT-10" target="_blank"
+                                <a href="https://www.inandoutbelleza.es/es/cesta?addCart=TRT-98" target="_blank"
                                    style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff;
                                     text-decoration: none; text-decoration: none; padding: 15px 25px;
                                     border-radius: 2px; border: 1px solid #56ab2a; display: inline-block;">
@@ -30,30 +28,34 @@
 <tr>
     <td bgcolor="#ffffff" align="left"
         style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Arial', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
+        <h3>¿Qué incluye?</h3>
+        <ul>
+            <li>
+                Aromaterapia y alineación corporal.
+            </li>
+            <li>
+                Efectiva exfoliación cítrica.
+            </li>
+            <li>
+                Concetrado reafirmante con ácido ascórbico, extracto de jengibre y fruto de kigelia.
+            </li>
+            <li>
+                Masaje reafirmante corporal.
+            </li>
+        </ul>
+
+        <p>Beneficios:</p>
+        <ul>
+            <li>
+                Ideal como tratamiento reafirmante.
+            </li>
+            <li>
+                Hidrata y combate el envejecimiento prematuro. -Previene la flacidez.
+            </li>
+        </ul>
         <p>
-            Carita es sinónimo de resultados, de grandes momentos de cuidado de la piel. Déjate seducir por una firma de
-            cosmética de lujo y de gran calidad. Es importante preparar y proteger nuestra piel, además de con nuestras
-            rutinas
-            de cada día en la que no puede faltar una crema con factor de protección solar, es recomendable de vez en
-            cuando
-            trabajar nuestra piel con un cuidado diferente y más específico en este caso os ofrecemos la Higiene facial
-            de
-            Carita. Limpia y renueva en profundidad. ¿Te lo vas a perder?
-        </p>
-        <p>
-            El tratamiento comienza con un desmaquillado completo, después aplicamos el mítico renovateur. Aquí no queda
-            todo,
-            después se realiza un peeling de ultrasonidos, por supuesto después aplicamos vapor para facilitar la
-            posterior
-            extracción y limpieza de poros. Para terminar, aplicamos una mascarilla específica.
-        </p>
-        <p>
-            ¿Buscas un centro para higiene facial en Málaga de reconocido prestigio y buenos precios? Todo lo que buscas
-            y mucho
-            más lo puedes encontrar en cualquiera de los dos centros In & Out. Pide ya tu cita por teléfono o través de
-            nuestra
-            web y no te pierdas esta gran oportunidad. <strong>Sólo el mes de Diciembre estará a 40€</strong>, os
-            esperamos!!
+            ¿Quieres saber por cuánto estará todo el mes de Febrero?<strong> Sólo 50€ en vez de 70€ precio habitual</strong>.
+            ¿Te lo vas a perder? ¡Os esperamos!
         </p>
         <p>
             <strong>
