fix bank import

--- a/newsletter.html
+++ b/newsletter.html
@@ -1,6 +1,9 @@
 <p>
-    Este mes desde In and Out os traemos una experiencia sensorial cítrica. Exfoliación + envoltura reafirmante,
-    hidratante y antioxidante de la mano de Natura Bissé.
+    <strong>Indiba</strong> os devolverá, un aspecto sereno, joven,firme y dulce. Un efecto que marca la diferencia en vuestra cara
+    después de pasar por él. Una sola sesión es suficiente para obtener un resultado real y palpable.
+    Si bien es cierto que su efecto es acumulativo: rejuvenece la piel, reafirma el rostro, cuello y regenera el
+    colágeno y elastina, y que cuantas más sesiones disfrutéis más beneficios obtendréis, también es cierto que
+    desde la primera sesión el aspecto de la piel mejora de manera radical.
 </p>
 </p></td></tr>
 <tr>
@@ -11,7 +14,7 @@
                     <table border="0" cellspacing="0" cellpadding="0">
                         <tr>
                             <td align="center" style="border-radius: 3px;" bgcolor="#56ab2a">
-                                <a href="https://www.inandoutbelleza.es/es/cesta?addCart=TRT-98" target="_blank"
+                                <a href="https://www.inandoutbelleza.es/es/cesta?addCart=TRT-86" target="_blank"
                                    style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff;
                                     text-decoration: none; text-decoration: none; padding: 15px 25px;
                                     border-radius: 2px; border: 1px solid #56ab2a; display: inline-block;">
@@ -28,34 +31,15 @@
 <tr>
     <td bgcolor="#ffffff" align="left"
         style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Arial', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-        <h3>¿Qué incluye?</h3>
-        <ul>
-            <li>
-                Aromaterapia y alineación corporal.
-            </li>
-            <li>
-                Efectiva exfoliación cítrica.
-            </li>
-            <li>
-                Concetrado reafirmante con ácido ascórbico, extracto de jengibre y fruto de kigelia.
-            </li>
-            <li>
-                Masaje reafirmante corporal.
-            </li>
-        </ul>
-
-        <p>Beneficios:</p>
-        <ul>
-            <li>
-                Ideal como tratamiento reafirmante.
-            </li>
-            <li>
-                Hidrata y combate el envejecimiento prematuro. -Previene la flacidez.
-            </li>
-        </ul>
         <p>
-            ¿Quieres saber por cuánto estará todo el mes de Febrero?<strong> Sólo 50€ en vez de 70€ precio habitual</strong>.
-            ¿Te lo vas a perder? ¡Os esperamos!
+            Es un tratamiento,no invasivo e indoloro, que produce una diatermia localizada en nuestro cuerpo. De efectos solo
+            beneficiosos, totalmente inocuo. Se trata de un calentamiento local de tejidos en una zona del cuerpo bajo la
+            influencia de un campo eléctrico o magnético. Este aumento de temperatura controlado se produce por la
+            circulación de una corriente de alta frecuencia, que provoca un aumento de la temperatura desde el interior de las
+            propias células. La intensidad del calor depende de la zona y problema estético a tratar. La sensación que
+            produce es relajante y agradable. ¿Te lo vas a perder?
+        </p><p>
+        Este mes lo encontraréis en nuestros centros a un precio de 47€ la sesión facial o corporal. ¡Os esperamos!
         </p>
         <p>
             <strong>
